<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ph.databaseinsertview.MainActivity"
    android:background="#ba4b4b"
    android:gravity="center">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/name"
    android:textStyle="normal|bold"
    android:textSize="18sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textPersonName"
        android:background="@drawable/edit"
        android:id="@+id/username"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/email"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit"
        android:id="@+id/email"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/password"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        android:inputType="textPassword"
        android:background="@drawable/edit"
        android:id="@+id/password"
        />

    <Button
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:id="@+id/button"
        android:background="@drawable/button"
        android:foreground="?android:attr/selectableItemBackground"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/button"
        android:id="@+id/view"
        android:foreground="?android:attr/selectableItemBackground"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/viewAll"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/button"
        android:id="@+id/viewAll"
        android:elevation="0dp"
        android:foreground="?android:attr/selectableItemBackground"/>


</LinearLayout>
