<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ba4b4b"
    tools:context="ph.databaseinsertview.viewData"
    android:layout_gravity="center"
    android:gravity="center">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alladata"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textPersonName"
        android:background="@drawable/edit"
        android:id="@+id/SearchUsername"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/email"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit"
        android:id="@+id/SearchEmail"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/button"
        android:id="@+id/SearchButton"
        />





</LinearLayout>
