<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_found_data"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#ba4b4b"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ph.databaseinsertview.foundData"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/found"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        android:layout_marginTop="20dp"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"

        android:inputType="textPersonName" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/email"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        android:inputType="textEmailAddress"

        android:id="@+id/emailView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/password"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        android:id="@+id/passwordView"
        />



</LinearLayout>
